Bug 1173418 - Check if a document is top level in DocAccessibleParent::Destroy so that RemoteDocShutdown isn't erroneously called r=tbsaunde