dom/ipc/TabParent.cpp
@@ -1137,6 +1137,7 @@ TabParent::RecvPDocAccessibleConstructor(PDocAccessibleParent* aDoc,
     return parentDoc->AddChildDoc(doc, aParentID);
   } else {
     MOZ_ASSERT(!aParentID);
+    doc->SetTopLevel();
     a11y::DocManager::RemoteDocAdded(doc);
   }
 #endif
